# cardinal

./: AGENTS.md  CHANGELOG.md  Cargo.toml  README.md  cardinal.h  diesel.toml
.cargo/: config.toml
.github/workflows/: frontend-ci.yml
cardinal/: .gitignore  README.md  package-lock.json  package.json
cardinal-sdk/: Cargo.toml
cardinal-sdk/examples/: fs_visit.rs
cardinal-sdk/src/: disk_entry.rs  event_flag.rs  event_stream.rs  fs_visit.rs  fs_visitor.rs  lib.rs  main.rs  models.rs  name_pool.rs  schema.rs  utils.rs
cardinal-sdk/src/fsevent/: event_flag.rs  event_id.rs
cardinal-syntax/src/: lib.rs
cardinal-syntax/tests/: boolean.rs  common.rs  filters.rs  optimizer.rs  precedence_matrix.rs  stress_cases.rs
cardinal/src/: App.css  App.jsx  App.tsx  index.js  main.tsx  menu.ts  tray.ts
cardinal/src-tauri/: Cargo.toml  Entitlements.plist  Info.plist  tauri.conf.json
cardinal/src-tauri/capabilities/: default.json
cardinal/src-tauri/src/: background.rs  commands.rs  lib.rs  quicklook.rs  window_controls.rs
cardinal/src/components/: ColumnHeader.jsx  ContextMenu.jsx  FSEventsPanel.jsx  FileRow.jsx  FileRow.tsx  MiddleEllipsisHighlight.jsx  MiddleEllipsisHighlight.test.ts  PreferencesOverlay.tsx  Scrollbar.jsx  StateDisplay.css  StateDisplay.jsx  StatusBar.jsx  StatusBar.tsx  VirtualList.jsx  VirtualizedRow.jsx
doc/: search-cache.md  search-syntax.md  todo.md
fs-icon/src/: lib.rs
fswalk/: Cargo.toml
fswalk/src/: lib.rs
lsf/src/: cache.rs  main.rs
migrations/2023-02-15-124931_rows/: down.sql  up.sql
namepool/: Cargo.toml
namepool/src/: lib.rs
pathbytes/src/: lib.rs
search-cache/: Cargo.toml
search-cache/src/: cache.rs  lib.rs  persistent.rs  query.rs  query_preprocessor.rs  slab.rs  slab_node.rs  tests_extra.rs  type_and_size.rs
search-cache/src/tests/: date_volume.rs
search-cache/tests/: content_filter_comprehensive.rs  query_matrix_big.rs  search_with_options_path_segments.rs
search-cancel/tests/: more.rs
slab-mmap/src/: serde.rs
src/: c.rs  lib.rs  processor.rs
src/database/: mod.rs
src/fs_entry/: mod.rs  tests.rs
src/fsevent/: mod.rs
was/: Cargo.toml
was/src/: main.rs
xtask/: Cargo.toml
xtask/src/: main.rs
(+22 files in other folders)
