[package]
name = "cardinal-sdk"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.69"
bincode = "2.0.0-rc.2"
rand = "0.8.5"
walkdir = "2.3.2"
diesel = { version = "2.0.0", features = ["sqlite"] }
diesel_migrations = { version = "2.0.0", features = ["sqlite"] }
crossbeam-channel = "0.5.6"
ignore = "0.4.20"
once_cell = { version = "1.17.1", features = ["parking_lot"] }
num_cpus = "1.15.0"
