[package]
name = "search-cache"
version = "0.1.0"
edition = "2024"

[dependencies]
fswalk = { path = "../fswalk" }
namepool = { path = "../namepool" }
cardinal-sdk = { path = "../cardinal-sdk" }
query-segmentation = { path = "../query-segmentation" }
zstd = { version = "0.13", features = ["zstdmt"] }
serde = { version = "1", features = ["derive"] }
slab = { version = "0.4", features = ["serde"] }
anyhow = "1.0.97"
crossbeam-channel = "0.5.15"
typed-num = { version = "0.3.0", default-features = false, features = ["serde"] }
tracing = "0.1"
postcard = { version = "1", features = ["use-std"] }
enumn = "0.1"
thin-vec = { version = "0.2.14", features = ["serde"] }

[dev-dependencies]
tempdir = "0.3"
